snapshot apis (#19)
